tests/compile_fail/add/union.stderr
error: `Add` cannot be derived for unions
 --> tests/compile_fail/add/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
